# RuaFlashTool

./: .gitignore  Cargo.toml  LICENSE  README.md  debug.ps1  package.ps1  sfx-config.txt
KernelPatch/: kpimg-android
LKM/KernelSU/: android13-5.10_kernelsu.ko  android14-5.15_kernelsu.ko  android15-6.6_kernelsu.ko
LKM/KernelSU Next/: android13-5.10_kernelsu.ko  android13-5.15_kernelsu.ko  android14-5.15_kernelsu.ko  android16-6.12_kernelsu.ko
LKM/KernelSU Next/32967/: android12-5.10_kernelsu.ko  android14-6.1_kernelsu.ko  android15-6.6_kernelsu.ko
LKM/KernelSU/22091/: android12-5.10_kernelsu.ko  android13-5.10_kernelsu.ko  android13-5.15_kernelsu.ko  android14-5.15_kernelsu.ko  android14-6.1_kernelsu.ko  android15-6.6_kernelsu.ko  android16-6.12_kernelsu.ko
LKM/KernelSU/32302/: android12-5.10_kernelsu.ko  android13-5.15_kernelsu.ko  android14-6.1_kernelsu.ko  android16-6.12_kernelsu.ko
LKM/KowSU/: android13-5.10_kernelsu.ko  android13-5.15_kernelsu.ko  android14-5.15_kernelsu.ko
LKM/KowSU/32345/: android12-5.10_kernelsu.ko  android14-6.1_kernelsu.ko  android15-6.6_kernelsu.ko  android16-6.12_kernelsu.ko
LKM/SukiSU Ultra/: android12-5.10_kernelsu.ko  android13-5.10_kernelsu.ko  android13-5.15_kernelsu.ko
LKM/SukiSU Ultra/40496/: android14-5.15_kernelsu.ko  android14-6.1_kernelsu.ko  android15-6.6_kernelsu.ko  android16-6.12_kernelsu.ko
Magisk/Alpha/26405-d78ee171-alpha/: stub.apk
Magisk/Alpha/27008-33f70f8f-alpha/: stub.apk
Magisk/Alpha/28104-03e03479-alpha/: stub.apk
Magisk/Alpha/30100-a344ebf-alpha/: stub.apk
Magisk/Alpha/30200-9476e728-alpha/: stub.apk
Magisk/Alpha/30400-c3db2e36-alpha/: stub.apk
Magisk/Kitsune/v27.0.1-R6687BB53-kitsune-ColorOSUI/: stub.apk
Magisk/Kitsune/v30.6-kitsune-revived/: stub.apk
Magisk/Magisk/Magisk-v29.0/: stub.apk
Magisk/Magisk/Magisk-v30.6/: stub.apk
crates/rua_cli/: Cargo.toml
crates/rua_cli/src/: main.rs  ui.rs
crates/rua_cli/src/utils/: file_finder.rs  mod.rs  path_resolver.rs
crates/rua_core/: Cargo.toml
crates/rua_core/src/: adb.rs  avb.rs  bootimg.rs  constants.rs  device.rs  error.rs  fastboot.rs  flasher.rs  lib.rs  payload.rs  sepolicy.rs  utils.rs
ksuinit/KernelSU/: ksuinit
ksuinit/KernelSU Next/32967/: ksuinit  ksuinit.d
ksuinit/KernelSU/32302/: ksuinit.d
ksuinit/KowSU/32345/: ksuinit
ksuinit/SukiSU Ultra/40496/: ksuinit.d
src/: constants.rs  fastboot_exec.rs  flash_part.rs  main.rs  payload_utils.rs  ui.rs
