[package]
name = "rua_cli"
version = "1.0.0-rc0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/yourusername/RuaFlashTool"
description = "CLI tool for RuaFlashTool - Android flashing tool"

[dependencies]
rua_core = { path = "../rua_core" }
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
figlet-rs = "0.1.5"
rustyline = "17.0.2"
rfd = "0.14.1"
webbrowser = "1.0.1"
ctrlc = "3.4.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
tokio-util = { version = "0.7", features = ["rt"] }
payload_dumper = "0.8"
serde_json = "1.0"
indicatif = "0.17"
uuid = { version = "1.10.0", features = ["v4"] }
windows-sys = { version = "0.60.2", features = ["Win32_System_Console", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }
