[package]
name = "rua_core"
version = "1.0.0-rc2"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/yourusername/RuaFlashTool"
description = "Core library for RuaFlashTool - Android flashing tool"

[dependencies]
thiserror = "2.0.11"
anyhow = "1.0.100"
tokio = { version = "1", features = ["full"] }
android-bootimg = { git = "https://github.com/5ec1cff/android_bootimg", branch = "master" }
lzma-rs = "0.3.0"
sha1 = "0.10.6"
sha2 = "0.10"
flate2 = "1.0.35"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
zstd = "0.13"
lz4_flex = "0.11"
cpio = "0.2"
adb_client = "2.1"
num_cpus = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uuid = { version = "1.10.0", features = ["v4"] }
colored = "2.1"
async-trait = "0.1"
indicatif = "0.17"
dashmap = "6.1"
tokio-util = { version = "0.7", features = ["rt"] }
scopeguard = "1.2.0"
tracing = "0.1"
regex = "1.10"
payload_dumper = { version = "0.8", features = ["remote_zip"] }
rsa = { version = "0.9", features = ["sha2"] }
num-bigint = "0.4"
rand = "0.8"
